# ai-recipes

./: README.md  pyproject.toml  requirements.txt
ai-agents/: main.py
resume-critiquer/: resume.py
